EAEC-60: Prevent text jumps due to padding on slide transition on small viewports

--- a/styles/components/_header-top.scss
+++ b/styles/components/_header-top.scss
@@ -26,21 +26,6 @@
 
     .no_selected & {
       opacity: .3;
-
-      .header-inner-content__text {
-        padding-left: 0;
-        padding-right: 0;
-
-        // @include media-breakpoint-up(sm) {
-        //   max-width: $round-image-size;
-        // }
-        // @include media-breakpoint-up(lg) {
-        //   max-width: $round-image-size-medium;
-        // }
-        // @include media-breakpoint-up(xl) {
-        //   max-width: $round-image-size-big;
-        // }
-      }
     }
   }
 
